ingress-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: elasticsearch.user1.serveron.xyz
    http:
      paths:
      - backend:
          service:
            name: quickstart-es-http
            port:
              number: 9200 
        path: /
        pathType: Prefix
