ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kibanna.user1.serveron.xyz
    http:
      paths:
      - backend:
          service:
            name: quickstart-kb-http
            port:
              number: 5601 
        path: /
        pathType: Prefix
